--- a/site-do-zero/index.html
+++ b/site-do-zero/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Webcars</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="background">
         <header>
@@ -24,10 +26,15 @@
         <main>
             <div id="card-main">
                 <h1 id="title-main">TESTE SEUS LIMITES.</h1>
-                <span id="text-main">Há um ponto em 7.000 RPM onde tudo desaparece. A máquina fica sem peso. Simplesmente desaparece. E tudo o que resta é um corpo se movendo no espaço e no tempo. 7.000 RPM. É aí que você o encontra. Você sente que está chegando. Ele se aproxima de você, fecha em seu ouvido. Faz uma pergunta a você. A única pergunta que importa. Quem é você?</span>
+                <span id="text-main">Há um ponto em 7.000 RPM onde tudo desaparece. A máquina fica sem peso.
+                    Simplesmente desaparece. E tudo o que resta é um corpo se movendo no espaço e no tempo. 7.000 RPM. É
+                    aí que você o encontra. Você sente que está chegando. Ele se aproxima de você, fecha em seu ouvido.
+                    Faz uma pergunta a você. A única pergunta que importa. Quem é você?</span>
             </div>
             <div id="second-card"></div>
         </main>
     </div>
 </body>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
