--- a/portfolio-card/index.html
+++ b/portfolio-card/index.html
@@ -55,7 +55,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/ichigo pfp.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/sung-pfpbttr.png" alt="Richard hanrick" width="80">
         </figure>
 
         <div class="info-content">
