--- a/website-games/index.html
+++ b/website-games/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Games</title>
-    <link rel="shortcut icon" href="images/skull-inv.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./css/images/skull-inv.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/button.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/card.css"> -->
