--- a/website-games/index.html
+++ b/website-games/index.html
@@ -14,13 +14,19 @@
 
 <body>
     <header class="navbar">
-        <!-- <a href="#" class="John">John</a> -->
-        <ul>
-            <li><a href="#" class="active">Início</a></li>
-            <li><a href="#section2-main">Sobre</a></li>
-            <li><a href="#">Trabalho</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#main-section">Home</a></li>
+                <li><a href="#section2-main">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
     </header>
     <main id="main-section">
         <div id="main-container">
@@ -80,4 +86,5 @@
     </section>
 </body>
 <script src="js/scroll.js"></script>
+<script src="js/navbar.js"></script>
 </html>
