target e uma foto minhakk

--- a/portfolio-card/index.html
+++ b/portfolio-card/index.html
@@ -55,7 +55,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/sung-pfpbttr.png" alt="claramente-eu" width="80">
+          <img src="./assets/images/frame-eu.png" alt="claramente-eu" width="80">
         </figure>
 
         <div class="info-content">
@@ -711,7 +711,7 @@
             </li> -->
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/johnbitu/login-register-Mysql">
+              <a target="_blank" href="https://github.com/johnbitu/login-register-Mysql">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -729,7 +729,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://johnbitu.github.io/websites-projects/website-netflix/">
+              <a target="_blank" href="https://johnbitu.github.io/websites-projects/website-netflix/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -747,7 +747,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="https://johnbitu.github.io/pokedex-reactjs/">
+              <a target="_blank" href="https://johnbitu.github.io/pokedex-reactjs/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -765,7 +765,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://johnbitu.github.io/html-css/tests/Login%20and%20Register/login.html">
+              <a target="_blank" href="https://johnbitu.github.io/html-css/tests/Login%20and%20Register/login.html">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
