segunda section do website

--- a/website-games/index.html
+++ b/website-games/index.html
@@ -17,8 +17,8 @@
         <nav>
             <ul class="nav-links">
                 <li><a href="#main-section">Home</a></li>
-                <li><a href="#section2-main">About</a></li>
-                <li><a href="#">Work</a></li>
+                <li><a href="#section1-main">About</a></li>
+                <li><a href="#section2-main">Work</a></li>
                 <li><a href="#">Projects</a></li>
             </ul>
             <div class="burger">
@@ -46,8 +46,8 @@
             </div>
         </div>
     </main>
-    <section id="section2-main">
-        <div id="section2-container">
+    <section id="section1-main">
+        <div id="section1-container">
             <div id="title-container">
                 <h1 id="title-section">Shop at <a href="#" id="word-logo">John</a></h1>
             </div>
@@ -57,7 +57,7 @@
                     selection of titles for every kind of gamer.
                 </p>
             </div>
-            <div id="button-section2">
+            <div id="button-section1">
                 <button class="button">
                     <span class="button_lg">
                         <span class="button_sl"></span>
@@ -67,7 +67,23 @@
             </div>
         </div>
     </section>
+    <section id="section2-main">
+        <div id="section2-container">
+            <div id="image-container">
+                <img src="css/images/gaming-boy.png" alt="gaming-boy" srcset="">
+            </div>
+        </div>
+        <div id="text2-container">
+            <h1 id="title2-section">Real time <br> Strategy <br> games</h1>
+            <div id="text2-section">
+                <p>
+                    Challenge yourself in a battle of <br> wits and skill vs NPCs and other <br> players alike.
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 <script src="js/scroll.js"></script>
 <script src="js/navbar.js"></script>
+
 </html>
